Fix navbar theme and scroll behavior on mobile :art::rocket:

--- a/styles/index.css
+++ b/styles/index.css
@@ -37,26 +37,33 @@
 
 @layer components {
   h1 {
-    @apply text-5xl mb-6 lg:text-8xl lg:mb-10;
+    @apply text-4xl mb-4 sm:text-6xl sm:mb-6 lg:text-7xl lg:mb-8;
   }
   h2 {
-    @apply text-4xl mb-4 lg:text-6xl lg:mb-8;
+    @apply text-2xl mb-4 sm:text-4xl sm:mb-4 lg:text-6xl lg:mb-8;
   }
   h3 {
-    @apply text-2xl mb-4  lg:text-4xl lg:mb-6;
+    @apply text-xl mb-4 sm:text-2xl sm:mb-4  lg:text-4xl lg:mb-6;
   }
   h4 {
-    @apply text-xl mb-4 lg:text-2xl lg:mb-4;
+    @apply text-lg mb-4 sm:text-xl sm:mb-4 lg:text-2xl lg:mb-4;
   }
   p {
-    @apply text-lg lg:text-3xl tracking-wider;
+    @apply text-lg  sm:text-lg lg:text-lg  tracking-wider;
+  }
+  .gradient-violet-fuchsia {
+    @apply bg-gradient-to-r from-violet-900 to-fuchsia-900;
   }
 }
 
+/* SCROLL BEHAVIOR */
 html {
   scroll-behavior: smooth;
 }
 
+section {
+  scroll-margin-top: 75px;
+}
 /* ANIMATIONS */
 
 @keyframes animatedBackground {
